\name{NEWS}
\title{bife news}
\section{Changes in version 0.7.2}{
  \itemize{
    \item Replaced NEWS.txt with NEWS.Rd.
    \item Improved the finite sample performance of bias corrections for the average partial effects in case of perfectly classified observations.
    \item The default option 'n_pop' in \code{get_APEs()} has been changed. Now the estimated covariance consists of the delta method part only, i.e. correction factor = 0.
  }
}
\section{Changes in version 0.7.1}{
  \itemize{
    \item Step-halving is now similar to \code{glm.fit2()}.
    \item Fixed an error in the covariance (influence function) of \code{get_APEs()}.
    \item Added reference for the bias correction in 'citation()'.
    \item Updated some references in the documentation and vignette.
    \item Fixed some typos in the documentation and vignette.
  }
}
\section{Changes in version 0.7}{
  \itemize{
    \item Added a generic function \code{logLik()} that returns the sum of the log-likelihood.
    \item 'X_new' in \code{predict()} now also permits data.frames.
    \item \code{bife()} now permits to expand functions with \code{poly()} and \code{bs()}.
    \item Added option 'sampling_fe' to \code{get_APEs()} to impose simplifying assumptions when estimating the covariance matrix.
    \item Fixed an error in \code{get_APEs()} related to the estimation of the covariance.
    \item Fixed a bug in the internal function used to estimate spectral densities.
  }
}
\section{Changes in version 0.6}{
  \itemize{
    \item Major source code cleaning and revision.
    \item Vignette renamed and revised.
    \item The asymptotic bias-correction is ported to a post-estimation routine \code{bias_corr()}.
    \item Replaced the bias-correction of Hahn and Newey (2004) with the one of Fernandez-Val (2009), i.e. refined bias expressions plus dynamic feedback possible.