@@ -1,9 +1,10 @@
 Package: bife
 Type: Package
 Title: Binary Choice Models with Fixed Effects
-Version: 0.7.2
+Version: 0.7.3
 Authors@R: c(
-  person("Amrei", "Stammann", email = "amrei.stammann@rub.de", role = c("aut", "cre")),
+  person("Amrei", "Stammann", email = "amrei.stammann@uni-bayreuth.de", role = c("aut", "cre"),
+          comment = c(ORCID = "0000-0003-1136-286X")),
   person("Daniel", "Czarnowske", email = "daniel.czarnowske@hhu.de", role = "aut",
           comment = c(ORCID = "0000-0002-0030-929X")),
   person("Florian", "Heiss", email = "florian.heiss@hhu.de", role = "aut"),
@@ -18,7 +19,7 @@ Imports: data.table, Formula, Rcpp, stats
 LinkingTo: Rcpp, RcppArmadillo
 URL: https://github.com/amrei-stammann/bife
 BugReports: https://github.com/amrei-stammann/bife/issues
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.3
 LazyData: true
 Suggests: alpaca, knitr, rmarkdown
 VignetteBuilder: knitr
