@@ -27,6 +27,7 @@ importFrom(data.table,first)
 importFrom(data.table,setDT)
 importFrom(data.table,setkeyv)
 importFrom(stats,binomial)
+importFrom(stats,lm.fit)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
 importFrom(stats,pnorm)
